[gd_scene load_steps=8 format=3 uid="uid://7yj6mwn4r6r0"]

[ext_resource type="Texture2D" uid="uid://l1jq47dgo2n1" path="res://assets/sprites/trait_background.png" id="1_6wntd"]
[ext_resource type="Script" uid="uid://bqgs8d0qi33wo" path="res://scripts/trait_ui/trait_ui.gd" id="1_v8mky"]
[ext_resource type="Resource" uid="uid://r8rvbwil1ydg" path="res://data/traits/viking.tres" id="2_c4b2r"]
[ext_resource type="Texture2D" uid="uid://b1aup08or8bao" path="res://assets/sprites/traits/elf.png" id="2_v8mky"]
[ext_resource type="FontFile" uid="uid://8di0jvr25vat" path="res://assets/font/m5x7.ttf" id="3_c4b2r"]

[sub_resource type="LabelSettings" id="LabelSettings_5gna1"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.627451)

[sub_resource type="LabelSettings" id="LabelSettings_t7bxl"]
font = ExtResource("3_c4b2r")
shadow_color = Color(0, 0, 0, 0.627451)

[node name="TraitUI" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_v8mky")
trait_data = ExtResource("2_c4b2r")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TraitIconBG" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_6wntd")
stretch_mode = 5

[node name="TraitIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/TraitIconBG"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_v8mky")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="ActiveUnitsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_5gna1")
vertical_alignment = 2

[node name="TraitLevelLabels" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(28, 16)
layout_mode = 2
theme_override_colors/default_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_c4b2r")
bbcode_enabled = true
text = "2/4/6"
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TraitLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ranger"
label_settings = SubResource("LabelSettings_t7bxl")
